<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CatalogCluster</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_listrumah">List Rumah</string>
    <string name="action_pengguna">Daftar Pengguna</string>
    <string name="action_tambah">Tambah Rumah</string>
    <string name="action_pemesanan">Pemesanan Rumah</string>
    <string name="action_cek">Lihat Stok</string>
    
    <string name="action_contact">Contact</string>
    <string name="action_lokasi">Lokasi</string>
    <string name="name">Nama</string>
    <string name="ktp">No. KTP</string>
    <string name="alamat">Alamat</string>
    <string name="hp">No. HP</string>
    <string name="email">E-Mail</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    

</resources>