<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp"
    android:visibility="visible"
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="525dp" >

            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="Cancel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="REGISTER"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inputNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:singleLine="true" >

                </EditText>

                <EditText
                    android:id="@+id/inputKtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ktp"
                    android:inputType="text"
                    android:paddingTop="30dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/inputAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/alamat"
                    android:inputType="text"
                    android:paddingTop="30dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/inputHp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hp"
                    android:inputType="text"
                    android:paddingTop="30dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:paddingTop="30dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/inputUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="text"
                    android:paddingTop="30dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/inputPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pass"
                    android:inputType="text|textPassword"
                    android:paddingTop="30dp"
                    android:singleLine="true" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="Submit" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>